# pass-the-pigs

./: .gitignore  README.md
parse_dataset/: config.txt  data.txt  parser.py  probabilities.txt  readable_output.txt  run_parser.sh
simulation/: CMakeLists.txt
simulation/headers/: GameCoordinator.h  Pig.h  PigData.h  PigRoller.h  Player.h  Simulator.h
simulation/sources/: GameCoordinator.cpp  Pig.cpp  PigRoller.cpp  Player.cpp  Simulator.cpp  main.cpp
